--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -17,14 +17,18 @@
 .navbar__item:hover {
   background-color: #3498db;
   transition: all 0.2s ease-out;
-  cursor: pointer;
 }
 
 .navbar__img {
-  margin-left: 20px;
-  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .navbar__text {
   color: #fff;
+  padding-right: 20px;
+}
+
+.navbar__active {
+  background-color: #3498db;
 }
