--- a/src/components/Profile/Posts/Posts.module.css
+++ b/src/components/Profile/Posts/Posts.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  margin-top: 30px;
+  margin: 30px 15px;
 }
 
 .profile__bottom h2 {
