--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -37,6 +37,7 @@
 .user__left {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-right: 30px;
   margin-left: 10px;
 }
