--- a/src/components/Profile/Posts/Posts.module.css
+++ b/src/components/Profile/Posts/Posts.module.css
@@ -14,7 +14,7 @@
 textarea {
   width: 100%;
   min-height: 80px;
-  padding-left: 5px;
+  padding: 8px;
   border-radius: 5px;
   border: none;
   background-color: rgb(216, 216, 216);
