--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,8 @@
 .header {
   grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #3498db;
   border-radius: 3px;
 }
@@ -7,4 +10,15 @@
 .header__logo img {
   width: 70px;
   height: 50px;
+}
+
+.header__link {
+  margin-right: 20px;
+  cursor: pointer;
+  font-weight: 600;
+  color: lightblue;
+}
+
+.header__link:hover {
+  text-decoration: underline;
 }
