--- a/src/components/Profile/Posts/Posts.module.css
+++ b/src/components/Profile/Posts/Posts.module.css
@@ -21,7 +21,7 @@ textarea {
   resize: none;
 }
 
-button {
+.profile__bottom button {
   margin-top: 5px;
   float: right;
   width: 80px;
@@ -34,7 +34,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.profile__bottom button:hover {
   opacity: 0.7;
   transition: all 0.3s ease-out;
 }
