--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -43,7 +43,6 @@
 }
 
 .user__left img {
-  margin-bottom: 5px;
   border-radius: 50%;
 }
 
@@ -59,7 +58,7 @@
   cursor: pointer;
   border-radius: 5px;
   font-size: 14px;
-  padding: 3px;
+  padding: 5px 10px;
 }
 
 .user__left button:hover {
