profile settings feature

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -10,10 +10,15 @@
   height: 250px;
 }
 
+.profile__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 .profile__name {
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 5px;
 }
 
 .profile__status {
@@ -21,21 +26,9 @@
   color: rgb(122, 122, 122);
 }
 
-.profile__job {
-  margin-top: 15px;
-}
-
-.profile__job_desc {
-  margin-top: 5px;
-}
-
 .profile__job span,
 .profile__job_desc span {
   text-decoration: underline;
-}
-
-.profile__contacts {
-  margin-top: 15px;
 }
 
 .profile__contacts a:hover {
