--- a/src/components/Users/User/User.module.css
+++ b/src/components/Users/User/User.module.css
@@ -15,6 +15,9 @@
 
 .user__left img {
   border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 5px;
 }
 
 .user__left img:hover {
