--- a/src/components/Users/Paginator/Paginator.module.css
+++ b/src/components/Users/Paginator/Paginator.module.css
@@ -10,7 +10,6 @@
 
 .pagination {
   margin: 10px 0 0 10px;
-  text-align: left;
 }
 
 .pagination span {
@@ -21,4 +20,8 @@
 .pagination span:hover {
   text-decoration: underline;
   cursor: pointer;
+}
+
+.pagination button {
+  margin: 0 10px;
 }
