--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -84,3 +84,12 @@
   color: red;
   font-size: 14px;
 }
+
+.form__captcha {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.form__captcha input {
+  width: 200px;
+}
