--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -1,23 +1,15 @@
-.settings {
-  margin-top: 10px;
-}
-
-.settings__title {
-  border-bottom: 1px solid rgb(115, 185, 250);
-  padding-bottom: 15px;
-}
-
 .settings__photo {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
-  padding: 0 20px 27px 20px;
+  padding: 0 20px 25px 20px;
   border-bottom: 1px solid rgb(115, 185, 250);
 }
 
 .photo__left {
   display: flex;
   flex-direction: column;
+  padding-right: 10px;
 }
 
 .photo__left span {
@@ -60,7 +52,6 @@
 
 .settings__about {
   margin-top: 30px;
-  padding: 0 20px 27px 20px;
 }
 
 .about__form {
@@ -111,7 +102,7 @@
 
 .settings__saved {
   text-align: center;
-  margin-top: 10px;
+  margin: 10px 0 20px 0;
   color: #27bd27;
   font-weight: 800;
 }
