--- a/src/components/Users/Paginator/Paginator.module.css
+++ b/src/components/Users/Paginator/Paginator.module.css
@@ -10,6 +10,7 @@
 
 .pagination {
   margin: 10px 0 0 10px;
+  padding-bottom: 10px;
 }
 
 .pagination span {
@@ -24,4 +25,5 @@
 
 .pagination button {
   margin: 0 10px;
+  padding: 2px 4px;
 }
