--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -39,3 +39,13 @@
 .navbar__active {
   background-color: #3498db;
 }
+
+.navbar__counter {
+  width: 20px;
+  height: 20px;
+  font-weight: 600;
+  border-radius: 50%;
+  text-align: center;
+  background: #ecf0f1;
+  color: #456681;
+}
