--- a/src/components/navbar/styles.module.css
+++ b/src/components/navbar/styles.module.css
@@ -5,42 +5,33 @@
   height: 583px;
 }
 
-.navbar__items {
+.navbarItems {
   margin-top: 15px;
 }
 
-.navbar__item {
+.navbarItem {
   display: flex;
-  padding-top: 5px;
+  align-items: center;
+  padding: 5px 0;
   margin-bottom: 10px;
 }
 
-.navbar__item:hover {
+.navbarItem:hover {
   background-color: #3498db;
   transition: all 0.2s ease-out;
 }
 
-.navbar__img {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.navbar__img svg {
-  width: 24px;
-  height: 24px;
-  color: #5181b8;
-}
-
-.navbar__text {
+.title {
   color: #fff;
   padding-right: 20px;
 }
 
-.navbar__active {
+.navbarActive {
   background-color: #3498db;
 }
 
-.navbar__counter {
+.counter {
+  padding: 1px;
   width: 20px;
   height: 20px;
   font-weight: 600;
