move auth flow to mobx

--- a/src/pages/login/styles.module.css
+++ b/src/pages/login/styles.module.css
@@ -3,6 +3,11 @@
   font-size: 20px;
 }
 
+.testAccount {
+  display: block;
+  margin-top: 10px;
+}
+
 .about p:last-child {
   margin-top: 10px;
 }
